<resources>
    <string name="app_name">微信demo</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="language">语言</string>
    <string name="home_tab_wechat">微信</string>
    <string name="home_tab_contacts">通讯录</string>
    <string name="home_tab_discover">发现</string>
    <string name="home_tab_me">我</string>
    <string name="need_permission">您需要开启权限,并重启应用</string>
    <string name="moments">朋友圈</string>
    <string name="scan_qr_code">扫一扫</string>
    <string name="shake">摇一摇</string>
    <string name="top_stories">看一看</string>
    <string name="search">搜一搜</string>
    <string name="people_nearby">附近的人</string>
    <string name="games">游戏</string>
    <string name="wechat_id">微信号：</string>
    <string name="wallet">钱包</string>
    <string name="favorites">收藏</string>
    <string name="my_posts">相册</string>
    <string name="sticker_gallery">表情</string>
    <string name="setting">设置</string>
    <string name="menu_create_group_chat">发起群聊</string>
    <string name="menu_scan_qr_code">扫一扫</string>
    <string name="menu_add_friends">添加朋友</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="menu_search_tip">搜索</string>
    <string name="about_wechat">关于微信demo</string>
    <string name="account_and_security">账号与安全</string>
    <string name="switch_account">切换账号</string>
    <string name="quit">退出</string>
    <string name="about_project">项目介绍</string>
    <string name="about_me">关于我</string>
    <string name="project_info">这是一个仿微信6.6.7版本的demo项目，主要用于自我学习和交流，请不要将项目用于商业用途！\n\n项目Github地址：<a href="https://github.com/itlgl/demo_wechat">github.com/itlgl/demo_wechat</a></string>
    <string name="me_info">一个Android开发者，我的Github：<a href="https://github.com/itlgl">itlgl</a></string>
    <string name="licence">这是一个仿微信的demo项目\n仅供学习交流\n不得用于商业用途</string>
    <string name="wechat_dialog_default_ok">我知道了</string>
    <string name="register_by_phone">手机号注册</string>
    <string name="nickname">昵称</string>
    <string name="nickname_hint">例如：陈晨</string>
    <string name="phone_number">手机号</string>
    <string name="phone_number_hint">请填写手机号</string>
    <string name="password">密码</string>
    <string name="password_hint">填写密码</string>
    <string name="password_length_short_error">密码不能少于6位</string>
    <string name="sms_verify_code">验证码</string>
    <string name="sms_verify_code_hint">请填写短信验证码</string>
    <string name="sms_verify_code_count_down_format">%s秒</string>
    <string name="get_sms_verify_code">获取验证码</string>
    <string name="get_sms_verify_code_again">重新获取验证码</string>
    <string name="region">国家/地区</string>
    <string name="register_licence_tip">点击上面的“注册”按钮，即表示你同意<a href="#">《腾讯微信软件许可及服务协议》</a>和<a href="#">《微信隐私保护指引》</a></string>
    <string name="loading">请稍候...</string>
    <string name="register_error">注册失败</string>
    <string name="ok">确定</string>
    <string name="default_region_code">86</string>
    <string name="default_region">中国</string>
    <string name="need_verify_sms_code_tip">输入短信验证码</string>
    <string name="input_sms_code_tip">输入手机号：%s对应的短信验证码</string>
    <string name="complete_register">完成注册</string>
</resources>