<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/selector_menu_background"
            android:clickable="true"
            android:padding="8dp"
            android:src="@drawable/ic_back_01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ebebeb">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.itlgl.demo.wechat.module.common.view.ItemMainView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:imageVisibility="gone"
                app:text="@string/account_and_security" />

            <com.itlgl.demo.wechat.module.common.view.ItemMainView
                android:id="@+id/about_wechat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:imageVisibility="gone"
                app:splitLine="true"
                app:text="@string/about_wechat" />

            <com.itlgl.demo.wechat.module.common.view.ItemMainView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imageVisibility="gone"
                app:text="@string/help_feedback" />

            <com.itlgl.demo.wechat.module.common.view.ItemMainView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:imageVisibility="gone"
                app:splitLine="true"
                app:text="@string/switch_account" />

            <com.itlgl.demo.wechat.module.common.view.ItemMainView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imageVisibility="gone"
                app:text="@string/quit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>