<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/title_bar_height"
            android:layout_height="@dimen/title_bar_height"
            android:layout_alignParentLeft="true"
            android:scaleType="center"
            android:src="@drawable/ic_back_02" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/need_verify_sms_code_tip"
                android:textColor="#000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/input_sms_code_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/input_sms_code_tip"
                android:textColor="#000"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/layout_sms_verify_code"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/get_sms_verify_code"
                    android:addStatesFromChildren="true"
                    android:background="@drawable/wechat_bottom_line_background">

                    <TextView
                        android:id="@+id/hint_sms_verify_code"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/sms_verify_code"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/sms_verify_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/hint_sms_verify_code"
                        android:background="@null"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:hint="@string/sms_verify_code_hint"
                        android:inputType="number"
                        android:lines="1"
                        android:textSize="16sp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/get_sms_verify_code"
                    style="@style/WechatButtonBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:enabled="false"
                    android:minWidth="120dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/get_sms_verify_code" />
            </RelativeLayout>

            <Button
                android:id="@+id/complete_register"
                style="@style/WechatButtonBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:text="@string/complete_register" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/register_licence_tip"
                android:textColor="#969696"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>