<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <com.itlgl.demo.wechat.module.main.view.WeChatRadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.itlgl.demo.wechat.module.main.view.WeChatRadioButton
            android:id="@+id/wrb_wechat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/home_tab_wechat"
            android:textColor="#555"
            android:textSize="13sp"
            app:defocus_icon="@drawable/home_chats"
            app:focus_color="#50ba26"
            app:focus_icon="@drawable/home_chats_green" />

        <com.itlgl.demo.wechat.module.main.view.WeChatRadioButton
            android:id="@+id/wrb_contacts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/home_tab_contacts"
            android:textColor="#555"
            android:textSize="13sp"
            app:defocus_icon="@drawable/home_contacts"
            app:focus_color="#50ba26"
            app:focus_icon="@drawable/home_contacts_green" />

        <com.itlgl.demo.wechat.module.main.view.WeChatRadioButton
            android:id="@+id/wrb_discover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/home_tab_discover"
            android:textColor="#555"
            android:textSize="13sp"
            app:defocus_icon="@drawable/home_discover"
            app:focus_color="#50ba26"
            app:focus_icon="@drawable/home_discover_green" />

        <com.itlgl.demo.wechat.module.main.view.WeChatRadioButton
            android:id="@+id/wrb_about_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/home_tab_me"
            android:textColor="#555"
            android:textSize="13sp"
            app:defocus_icon="@drawable/home_about_me"
            app:focus_color="#50ba26"
            app:focus_icon="@drawable/home_about_me_green" />
    </com.itlgl.demo.wechat.module.main.view.WeChatRadioGroup>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/radiogroup"
        android:background="#555" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/line" />
</RelativeLayout>
